1998-06-07  Stephan Kulow  <coolo@kde.org>

	* kfilesimpleview.cpp: added a repaint call after a resize

	* kfiledialog.cpp: new experimental button order

	* kfiledialog.cpp: added lastDirectory to remember the last visited
	directory for next open

1998-05-24  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: use setSelection also for the initial filename
	given

	* kfiledialog.cpp: introduced KFileFilter to make an abstraction
	for the used filter widget. Currently only QComboBox is supported,
	but this may change in the future
	
1998-05-20  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: changed the accelerator for completion 
	to CTRL-T

	* kfiledialog.cpp: fixed the setSelection() feature

1998-05-19  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.h: added setSelection

1998-05-18  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: bugfixes

1998-05-15  Stephan Kulow  <coolo@kde.org>

	* kfileinfocontents.cpp: some more changes and speed ups 
	(caching and some other little things)

1998-05-14  Stephan Kulow  <coolo@kde.org>

	* kfileinfocontents.cpp: added addItemList 

	* kfileinfocontents.h: introduced KFileInfoContentsSignaler

	* kfileinfocontents.cpp: some more speed improvment

1998-05-10  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: tried to speed up the refresh

1998-04-17  Stephan Kulow  <coolo@kde.org>

	* kfiledetaillist.cpp: implemented the date field
	
	* kfiledetaillist.cpp: made the columns wider

	* kfileinfocontents.cpp: use the new icons by Mark

Thu Apr 16 10:51:24 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfiledialog.*: some small fixes concerning preview
        
        * kfileinfocontents.cpp: fixed sorting bug in preview
        
        * kfilepreview.*: small bug fixes
        
        * kpreview.*: small bug fixes
        
        * added some documentation

1998-04-15  Stephan Kulow  <coolo@kde.org>

	* kfilepreview.cpp: use a list box instead of simple view

	* kfiledialog.cpp: fixed an ugly bug
